tests/ui/type/type-check/issue-41314.stderr
error[E0769]: tuple variant `X::Y` written as struct variant
  --> $DIR/issue-41314.rs:7:9
   |
LL |         X::Y { number } => {}
   |         ^^^^^^^^^^^^^^^
   |
help: use the tuple variant pattern syntax instead
   |
LL -         X::Y { number } => {}
LL +         X::Y(number) => {}
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0769`.
